2007-01-29 Richard Frith-Macdonald  <rfm@gnu.org>

	* JDBC.m: Add support for SQLTransaction class to batch JDBC
	operations.

2006-12-24 Richard Frith-Macdonald  <rfm@gnu.org>

	* JDBC.m: Don't store pointer to jni information in local variable
	until after we have opened the connection to the database, or we
	may be using a null pointer and generate a crash.

2006-12-22 Richard Frith-Macdonald  <rfm@gnu.org>

	* configure.ac: save/restore LIBS after jdbc check so that other
	tests don't try to link jre

2006-10-06 Nicola Pero <nicola.pero@meta-innovation.com>

	* GNUmakefile.wrapper.objc.preamble (ADDITIONAL_LIB_DIRS): Added 
	variable so that the wrapper compiles before the library is installed.

2006-10-02 Nicola Pero <nicola.pero@meta-innovation.com>

	* configure.ac: Do not read gnustep configuration which is never
	used.
	* configure.ac: Added --disable-jdbc-bundle,
	--disable-mysql-bundle, --disable-sqllite-bundle,
	--disable-postgres-bundle flags to be able to turn some bundles
	off (regardless of config results).
	* configure: Regenerated.

2006-10-01 Graham J Lee <graham.lee@operatelecom.com>

        * configure.ac:  Fix to use GNUSTEP_CONFIG_FILE environment variable.
	
2006-09-14 Richard Frith-Macdonald  <rfm@gnu.org>

	* JDBC push and pop local frames to avoid memory leaks.

2006-08-03 Nicola Pero <nicola.pero@meta-innovation.com>

	* SQLClient.m ([SQLClient -quoteString:]): Renamed local variable
	that had the same name as the method argument.
	
2005-06-23 Richard Frith-Macdonald  <rfm@gnu.org>

	* SQLClient.m: transaction efficiency tweak.
	* GNUmakefile: bump version to 1.3 as the new blob marker changes and
	postgres quoting changes alter behavior.

2005-06-04 Richard Frith-Macdonald  <rfm@gnu.org>

	* SQLClient.m: avoid useless compiler warnings.

2005-05-25 Richard Frith-Macdonald  <rfm@gnu.org>

	* configure.ac: Check for new postgres string escaping
	* configure: Regenerate
	* SQLClient.h: Add quoteString method for subclasses to override